<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/product_name"
            style="@style/details_activity_titles"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/product_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/price"
            style="@style/details_activity_titles"
            android:text="@string/price" />

        <EditText
            android:id="@+id/price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:id="@+id/quantity"
            style="@style/details_activity_titles"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageButton
                android:id="@+id/decrease_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_remove_black_24dp" />

            <EditText
                android:id="@+id/quantity_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4" />

            <ImageButton
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_add_black_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/supplier_name"
            style="@style/details_activity_titles"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/supplier_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/supplier_phone"
            style="@style/details_activity_titles"
            android:text="@string/supplier_phone" />

        <EditText
            android:id="@+id/supplier_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <TextView
            android:id="@+id/supplier_email"
            style="@style/details_activity_titles"
            android:text="@string/supplier_email" />

        <EditText
            android:id="@+id/supplier_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </LinearLayout>

</ScrollView>
